# html-redirect-file-generator

./: .gitignore  .gitlab-ci.yml  .gitmodules  LICENSE  README.md  main.py  pyproject.toml
data_repository_site_generator/: utilities.py
docs/: blockdiagram.drawio
html_redirect_file_generator/: __init__.py  utilities.py
tests/: __init__.py  test_html_resolvability.py  test_main.py  test_utilities.py
tests/tests_data/data_set_00/component/: README.md
tests/tests_data/data_set_00/sensor/0184ebd9-988b-7bb9-a3b0-efeec9048362/: README.md
tests/tests_data/data_set_00/sensor/0184ebd9-988b-7bb9-a7b7-bceb7a86411c/: rdf.json
tests/tests_data/data_set_00/sensor/01884e17-341e-7bce-b39b-db72ae3af1d7/: rdf.ttl  rdf.xml
tests/tests_data/data_set_00/sensor/01884e17-341e-7bce-b39b-db72ae3af1d7/docs/: README.md
tests/tests_data/data_set_00/sensor/1ed6c963-669f-62b7-8af6-3727686f020d/: README.md
tests/tests_data/data_set_00/substance/: README.md
